# cancer_music

./: .flake8  .gitignore  Dockerfile  pyproject.toml  readme.md
cancer_music/api/: main.py
cancer_music/api/front/: .eslintrc  tailwind.config.js  vite.config.js
cancer_music/api/front/src/: App.svelte  app.css
cancer_music/api/front/src/api/: constants.js  fx.js
cancer_music/api/front/src/components/: FilePicker.svelte  ProbSlider.svelte  SVGFilters.svelte  SaveToolBar.svelte  SheetDisplay.svelte  ToggleButton.svelte  VisualParameters.svelte
cancer_music/api/front/src/samples/: Frere_Jacques_Flute_Round.mxl
cancer_music/processor/: main.py  parameters.py  process.py  utils.py
src/api/: main.py  utils.py
src/api/front/: .eslintrc  index.html  package.json  vite.config.js
src/api/front/src/: App.svelte  Parameters.svelte  ProbSlider.svelte  SheetDisplay.svelte  app.css  main.js
src/api/front/src/api/: CustomPianoRollSVGVisualizer.js  constants.js  fx.js  parser.js  utils.js
src/api/front/src/components/: FilePicker.svelte  Parameters.svelte  ProbSlider.svelte  SaveButton.svelte  SaveToolBar.svelte  SheetDisplay.svelte  ToggleButton.svelte  VisualParameters.svelte
src/api/front/src/samples/: Mary_Had_A_Little_Lamb_Beginner_Piano.mxl  twinkle.mxl
src/processor/: constants.py  main.py  parameters.py  process.py  synth.py  therapy.py  utils.py
tests/: conftest.py
tests/data/: Untitled score.mxl  hbd.mxl  m_hbd.mxl
tests/processor/: test_process.py  test_utils.py
