[tool.poetry]
name = "cancer_music"
version = "0.1.0"
description = ""
authors = ["Rostyslav Hnatyshyn <rostyslav.hnatyshyn@gmail.com>"]
readme = "readme.md"
packages = [
    {include="api", from="src"}, 
    {include="processor", from="src"}
]

[tool.poetry.scripts]
mutate_sheet = 'processor.main:main'

[tool.poetry.dependencies]
python = "^3.11"
music21 = "^9.0"
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
typeguard = "^3.0.2"
uvicorn = "^0.22.0"
pyfluidsynth = "^1.3.2"
pyaudio = "^0.2.13"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pyright = "^1.1.305"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pyright]
include = ["src"]
exclude = [ ".venv"]
venvPath = "."
venv = ".venv"

executionEnviornments = [{ root = "src" }]

